--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Prepare
         run: npm ci
       - name: Lint
-        uses: gasd238/tslint-actions@master
+        uses: mooyoul/tslint-actions@master
         with:
           token: ${{ secrets.GB_TOKEN }}
           pattern: '*.ts'
