--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -14,3 +14,4 @@ jobs:
           schedule-id: 100001
           seat-id: 1
           slack-incoming-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
+          token: ${{ secrets.GB_TOKEN }}
