--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,16 @@
-name: workflow
-on: push
+name: example
+on:
+  schedule:
+    - cron: '*/5 * * * *' # Every 5 minutes
 jobs:
   job:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
-      - uses: actions/checkout@master
-      - name: Prepare
-        run: npm ci
-      - name: Lint
-        uses: mooyoul/tslint-actions@master
+      - name: Check Tickets
+        uses: gasd238/melon-ticket-actions@master
         with:
-          token: ${{ secrets.GB_TOKEN }}
-          pattern: '*.ts'
-      - name: Build
-        run: npm run build
-      - name: Publish
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-        run: npx semantic-release
-        env:
-          GH_TOKEN: ${{ secrets.GB_TOKEN }}
+          product-id: 209206
+          schedule-id: 100001
+          seat-id: 1
+          slack-incoming-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
